# RNBugRepro1

./: README.md
ReproducerApp/: App.tsx  package.json
ReproducerApp/ios/ReproducerApp.xcodeproj/: project.pbxproj
ReproducerApp/modules/react-native-calcturbo/: package.json  react-native-calcturbo.podspec
ReproducerApp/modules/react-native-calcturbo/android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
ReproducerApp/modules/react-native-calcturbo/android/src/main/: AndroidManifest.xml
ReproducerApp/modules/react-native-calcturbo/android/src/main/java/com/calcturbo/: CalcturboModule.kt  CalcturboPackage.kt
ReproducerApp/modules/react-native-calcturbo/cpp/: react-native-calcturbo.cpp  react-native-calcturbo.h
ReproducerApp/modules/react-native-calcturbo/ios/: Calcturbo.h  Calcturbo.mm
ReproducerApp/modules/react-native-calcturbo/src/: NativeCalcturbo.ts  index.tsx
